# ratel

./: .dockerignore  .gitignore  .lycheeignore  AGENTS.md  CLAUDE.md  CLAUDE_FE_REFACTOR.md  CLAUDE_SDK_SESSION1.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE.md  NOTICE  PRD.md  README-DRAFT.md  README.md  RELEASING.md  biome.json  cliff.toml  context7.json  docker-compose.yml  eslint.config.js  example.ts  llms.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  progress.txt  tsconfig.base.json  vitest.workspace.ts
benchmark/: Cargo.toml  README.md  RESULTS.md
benchmark/agent/: README.md  package.json
benchmark/agent/src/: arms.test.ts  arms.ts  cli.ts  corpus.test.ts  corpus.ts  metering.test.ts  metering.ts  paths.test.ts  paths.ts  pool.ts  report-cli.ts  report.test.ts  report.ts  run-all.ts  runner.test.ts  runner.ts  types.ts
benchmark/agent/src/agents/: _shared.test.ts  _shared.ts  control-oracle.test.ts  control-oracle.ts
benchmark/agent/src/judges/: llm.test.ts  llm.ts  programmatic.test.ts  programmatic.ts
benchmark/retrieval/: Cargo.toml  README.md
benchmark/retrieval/src/: lib.rs  main.rs
benchmark/retrieval/src/ingest/: toolret.rs
benchmark/src/: corpus.rs  lib.rs  main.rs  retrieval.rs  runner.rs
benchmark/src/ingest/: metatool.rs  mod.rs
benchmark/test-data/: SOURCES.md  metatool.jsonl  synthetic.jsonl
benchmark/test-data/metatool-mini/: all_clean_data.csv  multi_tool_query_golden.json  plugin_des.json
benchmark/tests/: metatool_ingest.rs
examples/adaptive-ranking-python/: README.md  adaptive_demo.py  main.py  model_swap.py  pyproject.toml  test_adaptive.py  tools.py
examples/py-langgraph/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
examples/py-langgraph/src/quickhr/: agent.py  main.py
examples/py-langgraph/tests/: conftest.py  test_agent.py
examples/py-langgraph/tests/data/: test_employees.py  test_time_off.py
examples/py-langgraph/tests/tools/: test_employees.py  test_time_off.py
examples/pydantic-ai/: README.md  agent.py  main.py  pyproject.toml  test_agent.py  tools.py
examples/telemetry-python/: README.md  main.py  pyproject.toml
py-packages/sdk/: pyproject.toml
py-packages/sdk/src/agentified/: client.py  tool.py
py-packages/sdk/tests/: conftest.py  test_client.py  test_sync.py  test_tool.py
scratch/spikes/retrieval-eval/: Cargo.toml  README.md
scratch/spikes/retrieval-eval/data/: corpus.jsonl  queries.jsonl
scratch/spikes/retrieval-eval/src/: main.rs
src/cloud/core/: CHANGELOG.md  Cargo.toml  README.md
src/cloud/core/examples/: dump_fixtures.rs
src/cloud/core/src/: content.rs  event.rs  lib.rs  message.rs  validate.rs
src/cloud/core/tests/: conformance.rs
src/cloud/python/: CHANGELOG.md  README.md  pyproject.toml
src/cloud/python/ratel_ai_cloud/: __init__.py  client.py  events.py  transport.py  validate.py
src/cloud/python/tests/: test_client.py  test_conformance.py  test_transport.py  test_validate.py
src/core/: CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md
src/core/agentified-lib/: Cargo.toml
src/core/agentified-lib/src/: embedding.rs  lib.rs  models.rs  ranking.rs  storage.rs
src/core/agentified-server/: Cargo.toml
src/core/agentified-server/assets/: inspector.html
src/core/agentified-server/src/: analyze.rs  cli.rs  inspect.rs  main.rs  mcp.rs
src/core/lib/: CHANGELOG.md  Cargo.toml  README.md
src/core/lib/examples/: search_demo.rs
src/core/lib/src/: dense_search.rs  embedding.rs  fusion.rs  indexing.rs  lib.rs  registry.rs  reranker.rs  search.rs  skill.rs  skill_indexing.rs  skill_registry.rs  tool.rs  tool_registry.rs  usage.rs
src/core/lib/tests/: dense_search.rs  hybrid_search.rs  tool_search.rs  trace.rs
src/core/src/: dense_cache.rs  embedding.rs  embedding_config.rs  fact.rs  fact_indexing.rs  fact_registry.rs  fusion.rs  lib.rs  main.rs  method.rs  search.rs  skill.rs  skill_indexing.rs  skill_registry.rs  tool.rs  tool_registry.rs  usage.rs  usage_learner.rs
src/core/src/trace/: event.rs  mod.rs  sink.rs
src/core/tests/: tool_search.rs  usage_ranking.rs
src/graph/: Cargo.toml  README.md
src/graph/src/: lib.rs  main.rs
src/graph/tests/: replay.rs
src/py-packages/langchain/: README.md  pyproject.toml
src/py-packages/langchain/tests/: conftest.py  test_agentified.py  test_events.py
src/py-packages/sdk/: README.md  pyproject.toml
src/py-packages/sdk/tests/: test_api_client.py  test_client.py  test_context_builder.py  test_conversation.py  test_dataset_ref.py  test_events.py  test_instance.py  test_session.py  test_skill.py  test_sync.py
src/sdk/cloud-py/: CHANGELOG.md  README.md  pyproject.toml
src/sdk/cloud-py/ratel_ai_cloud/: __init__.py  canonical.py  errors.py  fetch_catalog.py  skill_sync.py
src/sdk/cloud-py/tests/: conftest.py  test_canonical.py  test_errors.py  test_fetch_catalog.py  test_index.py  test_integration.py  test_mock_source.py  test_skill_sync.py
src/sdk/local-skills-py/: README.md  pyproject.toml
src/sdk/local-skills-py/ratel_ai_local_skills/: __init__.py
src/sdk/local-skills-py/tests/: test_local_skills.py
src/sdk/python/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/sdk/python/examples/: README.md  observability_demo.py
src/sdk/python/native/: Cargo.toml  README.md
src/sdk/python/ratel_ai/: __init__.py  _native.pyi  anthropic.py  capabilities.py  catalog.py  catalog_loader.py  compat.py  exceptions.py  experimental.py  fact_catalog.py  gateway.py  gateway_compat.py  grounding.py  mcp.py  openai.py  skill_catalog.py  skill_gateway.py  skill_tools.py  source.py  telemetry.py
src/sdk/python/tests/: conftest.py  test_adaptive_ranking.py  test_capabilities.py  test_catalog.py  test_catalog_loader.py  test_cloud_client.py  test_compat.py  test_dense.py  test_embedding_errors.py  test_exporter.py  test_fact_catalog.py  test_gateway.py  test_gateway_compat.py  test_grounding.py  test_index.py  test_mcp.py  (+15 more)
src/telemetry/core/: CHANGELOG.md  Cargo.toml  README.md
src/telemetry/python/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
(+933 files in other folders)
