[workspace]
resolver = "3"
members = [
    "src/core",
    "src/sdk/ts/native",
    "src/sdk/python/native",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
repository = "https://github.com/ratel-ai/ratel"
homepage = "https://github.com/ratel-ai/ratel"
documentation = "https://docs.rs/ratel-ai-core"
authors = ["Agentified"]

[workspace.dependencies]
ratel-ai-core = { path = "src/core" }
