[workspace]
resolver = "3"
members = [
    "src/core",
    "src/telemetry/core",
    "src/sdk/ts/native",
    "src/sdk/python/native",
]

[workspace.package]
# Versions are per-package (ADR-0008): each release unit carries its own version
# in its own manifest, tagged independently (core-v*, sdk-ts-v*, sdk-py-v*). Only
# non-version metadata is shared here.
edition = "2024"
repository = "https://github.com/ratel-ai/ratel"
homepage = "https://github.com/ratel-ai/ratel"
documentation = "https://docs.rs/ratel-ai-core"
authors = ["Agentified"]

[workspace.dependencies]
ratel-ai-core = { path = "src/core" }

# Release builds ship as native addons (SDK cdylibs) where binary size is user-
# facing install weight. `strip` drops symbol/debug tables that serve no runtime
# purpose; `lto = "thin"` + `codegen-units = 1` let dead-code elimination cross
# crate boundaries (unused candle-transformers models, gemm kernels). Must live
# in the workspace root — cargo ignores `[profile]` in member manifests.
[profile.release]
strip = true
lto = "thin"
codegen-units = 1
