[package]
name = "ratel-benchmark"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
publish = false

[lib]
name = "ratel_benchmark"
path = "src/lib.rs"

[[bin]]
name = "ratel-benchmark"
path = "src/main.rs"

[dependencies]
ratel-core = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
rand = "0.9"

[dev-dependencies]
tempfile = "3.10"
