[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickhr-langgraph"
version = "0.1.0"
description = "QuickHR agent using Agentified + LangGraph"
requires-python = ">=3.11"
dependencies = [
    "agentified>=0.0.5",
    "langgraph>=0.4",
    "langchain-google-genai>=2",
    "langchain-core>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/quickhr"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
