[project]
name = "ratel-example-telemetry"
version = "0.0.0"
description = "Ratel telemetry — emit ratel.* spans through the OpenTelemetry Python SDK"
requires-python = ">=3.10"
dependencies = [
    "ratel-ai-telemetry",
    # The console exporter + TracerProvider the demo wires by hand. Bounded to the
    # same line as ratel-ai-telemetry (it caps OTel below 1.42 to keep py3.9).
    "opentelemetry-sdk>=1.41.0,<1.42",
]

[tool.uv.sources]
# Use the local telemetry helper from this monorepo rather than PyPI.
ratel-ai-telemetry = { path = "../../src/telemetry/python" }
