[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentified"
version = "0.0.3"
description = "Python SDK for Agentified — Context Intelligence Layer for AI agents"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentified"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
