[workspace]
resolver = "3"
members = [
    "lib",
    "server",
    "../integrations/mcp-server",
    "../integrations/cli",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
license-file = "../../LICENSE.md"
repository = "https://github.com/ratel-ai/ratel"

[workspace.dependencies]
ratel-core = { path = "lib" }
