[package]
name = "ratel-ai-core"
version = "0.2.1-rc.1" # core-v* release unit (ADR-0016)
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
readme = "README.md"
description = "Tool retrieval and ranking for AI agents — BM25 over tool catalogs. Core of the Ratel context engineering platform."
keywords = ["mcp", "ai-agents", "tool-calling", "bm25", "retrieval"]
categories = ["text-processing", "algorithms"]

[dependencies]
bm25 = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[dev-dependencies]
tempfile = "3"
