[package]
name = "ratel-ai-core"
version = "0.3.0-rc.3" # core-v* release unit (ADR-0008)
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
readme = "README.md"
description = "Tool and skill retrieval for AI agents — selectable BM25, dense (semantic), or hybrid search over catalogs. Core of the Ratel context engineering platform."
keywords = ["mcp", "ai-agents", "tool-calling", "embeddings", "retrieval"]
categories = ["text-processing", "algorithms"]

[dependencies]
bm25 = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

# Dense (semantic) retrieval — pure-Rust Candle inference, no C++/ONNX native
# dep, so the SDK wheels/addons stay clean cross-platform. `hf-hub` fetches the
# model on first use into the shared HuggingFace cache (sync `ureq` backend,
# rustls — no OpenSSL/native-tls). See ADR-0011.
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
# `fancy-regex` is the pure-Rust regex backend; `onig` pulls oniguruma (C) via
# onig_sys, which breaks cross-compilation to aarch64-linux for the SDK
# wheels/addons. BERT WordPiece tokenization is unaffected by the backend.
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
hf-hub = { version = "0.5", default-features = false, features = ["ureq"] }

[dev-dependencies]
tempfile = "3"
