[package]
name = "ratel-ai-graph"
version = "0.0.0"
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
# Not a release unit: `scripts/release-units.mjs` is the source of truth, and
# adding one costs a tag prefix, a Trusted Publisher registration, and a manual
# first publish (ADR-0008). This is a local tool for rebuilding and inspecting a
# usage graph; promote it deliberately if it ever earns a release.
publish = false

[dependencies]
ratel-ai-core.workspace = true
serde_json = "1.0"

[[bin]]
name = "ratel-graph"
path = "src/main.rs"
