[workspace]
# Standalone crate — explicitly NOT a member of the main workspace at
# src/core/Cargo.toml. Throwaway eval harness for the ADR 0009 spike.

[package]
name = "retrieval-eval"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
fastembed = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
