[package]
name = "agentified-lib"
version = "0.2.4"
edition = "2021"
license = "LicenseRef-Sustainable-Use"

[features]
test-utils = []

[dependencies]
tokio = { version = "1", features = ["sync", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
async-trait = "0.1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
