[package]
name = "agentified-server"
version = "0.2.5"
edition = "2021"
license = "LicenseRef-Sustainable-Use"

[dependencies]
agentified-lib = { path = "../agentified-lib" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
agentified-lib = { path = "../agentified-lib", features = ["test-utils"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
