[package]
name = "agentified-server"
version = "0.2.5"
edition = "2021"
license = "LicenseRef-Sustainable-Use"

[dependencies]
agentified-lib = { path = "../agentified-lib" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive", "env"] }
rmcp = { version = "1.5", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
] }
tower = { version = "0.5", features = ["util"] }

[dev-dependencies]
agentified-lib = { path = "../agentified-lib", features = ["test-utils"] }
http-body-util = "0.1"
rmcp = { version = "1.5", features = ["client", "server", "transport-async-rw"] }
