[package]
name = "ratel-ai-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
readme = "README.md"
description = "Tool retrieval and ranking for AI agents — BM25 over tool catalogs. Core of the Ratel context engineering platform."
keywords = ["mcp", "ai-agents", "tool-calling", "bm25", "retrieval"]
categories = ["text-processing", "algorithms"]

[dependencies]
bm25 = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
