[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentified-langchain"
version = "0.0.8"
description = "LangChain adapter for Agentified — tool injection for LangChain/LangGraph agents"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "agentified>=0.0.8",
    "langchain-core>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentified_langchain"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
agentified = { path = "../sdk", editable = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]
