[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ratel-ai-local-skills"
version = "0.1.0"
description = "Ratel local SKILL.md directory loader — the reference CatalogLoader that hydrates a SkillCatalog from a folder of <name>/SKILL.md files (default ~/.ratel/skills). ADR-0003/0005."
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [{ name = "Agentified" }]
requires-python = ">=3.9"
keywords = [
    "ratel",
    "skills",
    "skill-md",
    "catalog-loader",
    "context-engineering",
    "ai-agents",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# The SDK (for the CatalogLoader seam + Skill/SkillCatalog) and a real YAML parser.
dependencies = ["ratel-ai", "pyyaml>=6.0"]

[project.optional-dependencies]
# pytest-asyncio only for the attach_loader integration test (attach is async).
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/ratel-ai/ratel"
Repository = "https://github.com/ratel-ai/ratel"
Issues = "https://github.com/ratel-ai/ratel/issues"

[tool.hatch.build.targets.wheel]
packages = ["ratel_ai_local_skills"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

# Runtime floor is 3.9 (via `from __future__ import annotations`); mypy's minimum
# supported target is 3.10, so we type-check against that (matches the Python SDK).
[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
