[package]
name = "ratel-ai-telemetry"
version = "0.1.0-rc.2" # telemetry-core-v* release unit (ADR-0008)
edition.workspace = true
license = "MIT"
repository.workspace = true
homepage.workspace = true
# Not the workspace default (docs.rs/ratel-ai-core): each published crate points at its own docs.
documentation = "https://docs.rs/ratel-ai-telemetry"
authors.workspace = true
readme = "README.md"
description = "Ratel telemetry conventions — the ratel.* overlay on OpenTelemetry gen_ai spans. Constants and helpers for the Ratel context engineering platform."
keywords = ["telemetry", "opentelemetry", "observability", "gen-ai", "ratel"]
categories = ["development-tools::profiling"]
