[package]
name = "ratel-sdk-ts-native"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi9", "serde-json-ordered"] }
napi-derive = "3"
ratel-ai-core = { workspace = true }
serde_json = { version = "1.0", features = ["preserve_order"] }

[build-dependencies]
napi-build = "2"
